Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 <p>Welcome! I'm Jeniffer Soto, student of DATA 101 from the College of Charleston. This space is dedicated to provide information about the Wells Fargo Analytics competition. Feel free to navigate the following sections, which provide related information on the Deliverables. If you have any questions, please contact me at <a href="mailto:sotoperezj@g.cofc.edu">sotoperezj@g.cofc.edu</a></p>
 
 <h1>
+<a id="preparing-the-data" class="anchor" href="#preparing-the-data" aria-hidden="true"><span class="octicon octicon-link"></span></a>Preparing the data</h1>
+
+<p>To obtain only the data that's useful out of the 220,377 observations, we upload the data set into the R program and proceed to pre-process the data. The pre-process consists of getting rid of unnecessary space, words, and facebook posts, or tweets. During this phase we selected a sample size of 10000 facebook posts and tweets.</p>
+
+<h1>
 <a id="code" class="anchor" href="#code" aria-hidden="true"><span class="octicon octicon-link"></span></a>Code</h1>
 
 <div class="highlight highlight-source-r"><pre><span class="pl-smi">a</span> <span class="pl-k">&lt;-</span> <span class="pl-c1">1</span>
