Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
 
 <p>Provide an analytic report of 1,500 words or less that is structured as outlined below, utilizing the dataset.txt provided by Wells Fargo.</p>
 
-<h1>
-<a id="what-financial-topics-do-consumers-discuss-on-social-media-and-what-caused-the-consumers-to-post-about-this-topic" class="anchor" href="#what-financial-topics-do-consumers-discuss-on-social-media-and-what-caused-the-consumers-to-post-about-this-topic" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>What financial topics* do consumers discuss on social media and what caused the consumers to post about this topic?</strong>
-</h1>
+<h4>
+<a id="question-1-what-financial-topics-do-consumers-discuss-on-social-media-and-what-caused-the-consumers-to-post-about-this-topic" class="anchor" href="#question-1-what-financial-topics-do-consumers-discuss-on-social-media-and-what-caused-the-consumers-to-post-about-this-topic" aria-hidden="true"><span class="octicon octicon-link"></span></a>Question 1-<strong>What financial topics do consumers discuss on social media and what caused the consumers to post about this topic?</strong>
+</h4>
 
 <h2>
 <a id="deliverable-a---describe-your-approach-and-methodology" class="anchor" href="#deliverable-a---describe-your-approach-and-methodology" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Deliverable A - Describe your Approach and Methodology.</strong>
 </h2>
 
-<h2>
-<a id="preparing-the-data" class="anchor" href="#preparing-the-data" aria-hidden="true"><span class="octicon octicon-link"></span></a>Preparing the data</h2>
+<h3>
+<a id="preparing-the-data" class="anchor" href="#preparing-the-data" aria-hidden="true"><span class="octicon octicon-link"></span></a>Preparing the data</h3>
 
 <p>To obtain only the data that's useful out of the 220,377 observations, we upload the data set into the R program and proceed to pre-process the data. When uploaded in R, inspect the type of data dealt with, which in this competition is comments from facebook posts and tweets.  The pre-process consists of getting rid of unnecessary spaces, words, and facebook posts, or tweets. During this phase we select a sample size, in this case of 10,000 observations, to reduce the number of observations we have to work with while staying statistically sound for predictions.  </p>
 
-<h3>
-<a id="code" class="anchor" href="#code" aria-hidden="true"><span class="octicon octicon-link"></span></a>Code</h3>
+<h4>
+<a id="code" class="anchor" href="#code" aria-hidden="true"><span class="octicon octicon-link"></span></a>Code</h4>
 
 <div class="highlight highlight-source-r"><pre><span class="pl-c"># Load data set, in my case ('df.Rda')</span>
 load(<span class="pl-s"><span class="pl-pds">"</span>/Users/Jenn/Desktop/Analytic_Competition/df.Rda<span class="pl-pds">"</span></span>)
