--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 
 <p>To obtain only the data that's useful out of the 220,377 observations, we upload the data set into the R program and proceed to pre-process the data. When uploaded in R, inspect the type of data dealt with, which in this competition is comments from facebook posts and tweets.  The pre-process consists of getting rid of unnecessary spaces, words, and facebook posts, or tweets. During this phase we select a sample size, in this case of 10,000 observations, to reduce the number of observations we have to work with while staying statistically sound for predictions.  </p>
 
-<p>The team indexed each bank as, BankA, BankB, Bank C, and Bank D to then replicate the tests: positive and negative as well as word frequency, then we tested the data overall to find positive and negative sentiment words as well as high frequency words. From these, we can have an idea of the main discussed subjects. The results can be downloaded as an excel file during this step, in this case the excel files created were positive.txt.csv and negative.txt.csv.</p>
+<p>The team indexed each bank as, BankA, BankB, Bank C, and Bank D. Then we tested the data to find positive and negative sentiment words as well as high frequency words. From these, we can have an idea of the main topics mentioned. The results can be downloaded as an excel file during this step. In this case the excel files created were positive.txt.csv and negative.txt.csv.</p>
+
+<p>After categorizing the csv's files into "relevant" and non-"relevant" to positive or negative comments, we can upload the csv's back to R and train on them for classification purposes. From here, many approaches can be applied, for example clustering approach. </p>
 
 <p><img src="https://raw.githubusercontent.com/jennsoto/wells_fargo_analytics/d37e7cb42a5749583d23ad164b0b4f3a91fe95cd/images/flow%20chart.png" alt="Flow Chart"></p>
 
