Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -279,13 +279,18 @@ prp(<span class="pl-smi">fit</span>)
 <li>Grants </li>
 <li>Management</li>
 <li>ATM</li>
-<li>Phone Calls
-####Substance:</li>
+<li>Phone Calls</li>
+</ul>
+
+<h4>
+<a id="substance" class="anchor" href="#substance" aria-hidden="true"><span class="octicon octicon-link"></span></a>Substance:</h4>
+
+<ul>
 <li>Customer Attrition — Likes customer service/dislikes customer service</li>
 </ul>
 
 <h2>
-<a id="deliverable-e---create-a-narrative-of-insights-supported-by-the-quantitative-results-should-include-graphs-or-charts" class="anchor" href="#deliverable-e---create-a-narrative-of-insights-supported-by-the-quantitative-results-should-include-graphs-or-charts" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Deliverable E</strong> - Create a narrative of insights supported by the quantitative results (should include graphs or charts)</h2>
+<a id="deliverable-e---create-a-narrative-of-insights-supported-by-the-quantitative-results-should-include-graphs-or-charts" class="anchor" href="#deliverable-e---create-a-narrative-of-insights-supported-by-the-quantitative-results-should-include-graphs-or-charts" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Deliverable E</strong> - Create a narrative of insights supported by the quantitative results (should include graphs or charts).</h2>
 
 <p>According to the classification tree results, when banks are acknowledge for their service they receive positive statements within a .5 relevancy. </p>
       </section>
