--- a/index.html
+++ b/index.html
@@ -298,6 +298,9 @@ summary(<span class="pl-smi">fit</span>) <span class="pl-c"># detailed summary o
 <p>The most frequent words obtained served as a guide to understand what subjects customers are talking about. According to our results, customers are commenting about online services, phone calls, customer service, and bank accounts. </p>
 
 <p>According to the classification tree results, positive statements within a .5 relevancy are "thanks," "very," "service," "support," "love," and "thank." With more work on the csv's files, we could utilize this method to obtain only the positive or negative comments.</p>
+
+<h4>
+<a id="100-most-frequent-words" class="anchor" href="#100-most-frequent-words" aria-hidden="true"><span class="octicon octicon-link"></span></a>100 Most Frequent Words</h4>
       </section>
     </div>
 
