Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -301,6 +301,8 @@ summary(<span class="pl-smi">fit</span>) <span class="pl-c"># detailed summary o
 
 <h4>
 <a id="100-most-frequent-words" class="anchor" href="#100-most-frequent-words" aria-hidden="true"><span class="octicon octicon-link"></span></a>100 Most Frequent Words</h4>
+
+<p><img src="https://raw.githubusercontent.com/jennsoto/wells_fargo_analytics/095790653456e1eed525680946f2e8d7cc9dd1bc/images/100.maxwords.png" alt="100_most_frequent"></p>
       </section>
     </div>
 
