Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@ summary(<span class="pl-smi">fit</span>) <span class="pl-c"># detailed summary o
 
 <p><img src="https://raw.githubusercontent.com/jennsoto/wells_fargo_analytics/095790653456e1eed525680946f2e8d7cc9dd1bc/images/100.maxwords.png" alt="100_most_frequent"></p>
 
+<p><img src="https://raw.githubusercontent.com/jennsoto/wells_fargo_analytics/9822cf99ffd31429dd0d548032f050b109db6c83/images/plot100.png" alt="plot_100"></p>
+
 <p>The most frequent words obtained served as a guide to understand what subjects customers are talking about. According to our results, customers are commenting about online services, phone calls, customer service, and bank accounts. </p>
 
 <p>According to the classification tree results, positive statements within a .5 relevancy are "thanks," "very," "service," "support," "love," and "thank." With more work on the csv's files, we could utilize this method to obtain only the positive or negative comments.</p>
